<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.dales.fragoso.drawplay.View.MainMenuActivity">

    <Button
        android:id="@+id/playBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/menubuttonbg"
        android:onClick="gameStart"
        android:text="Iniciar Jogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/rulesBtn"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/menubuttonbg"
        android:onClick="goToRules"
        android:text="Regras"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/tutorialBtn"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/menubuttonbg"
        android:onClick="goToTutorial"
        android:text="Tutorial"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rulesBtn"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/menubuttonbg"
        android:onClick="exit"
        android:text="Sair"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorialBtn"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="292dp"
        android:layout_height="177dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/rankingIcon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:onClick="goToRanking"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exitBtn"
        app:srcCompat="@drawable/rankingicon" />

</android.support.constraint.ConstraintLayout>
