<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.dales.fragoso.drawplay.View.RegisterActivity">

    <TextView
        android:id="@+id/registerEquipTextView"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="64dp"
        android:text="Cadastrar Equipe"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EquipNametextView"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:elevation="1dp"
        android:fontFamily="serif"
        android:text="Nome:"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/teamName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/teamName"
        app:layout_constraintTop_toBottomOf="@+id/registerEquipTextView" />

    <EditText
        android:id="@+id/teamName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:autoText="false"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEquipTextView" />

    <TextView
        android:id="@+id/member1TextView"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:elevation="1dp"
        android:fontFamily="serif"
        android:text="Membro 1:"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/member1"
        app:layout_constraintTop_toBottomOf="@+id/EquipNametextView" />

    <EditText
        android:id="@+id/member1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:autoText="false"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/teamName" />

    <TextView
        android:id="@+id/member2TextView"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:elevation="1dp"
        android:fontFamily="serif"
        android:text="Membro 2:"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/member1"
        app:layout_constraintTop_toBottomOf="@+id/member1TextView" />

    <EditText
        android:id="@+id/member2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:autoText="false"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/member1" />

    <TextView
        android:id="@+id/member3TextView"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:elevation="1dp"
        android:fontFamily="serif"
        android:text="Membro 3:"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/member1"
        app:layout_constraintTop_toBottomOf="@+id/member2TextView" />

    <EditText
        android:id="@+id/member3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:autoText="false"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/member2" />

    <TextView
        android:id="@+id/member4TextView"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:elevation="1dp"
        android:fontFamily="serif"
        android:text="Membro 4:"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/member1"
        app:layout_constraintTop_toBottomOf="@+id/member3TextView" />

    <EditText
        android:id="@+id/member4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:autoText="false"
        android:backgroundTint="@android:color/background_light"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorAccent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/member3" />

    <Button
        android:id="@+id/registerFinalyBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@android:drawable/button_onoff_indicator_on"
        android:onClick="registerTeam"
        android:text="Casdastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
